--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -17,11 +17,20 @@ body {
     margin-bottom: 20px;
     /* display: flex;
     justify-content: space-between;   */
+    /* position: fixed; */
+    /* top: 0; */
+    /* width: 100%; */
 }
 
 a {
     text-decoration: none;
     color: white;
+}
+
+.cur-status {
+    font-size: 22px;
+    color: green;
+    margin: 0;
 }
 
 .nav-link:hover {
