--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='imgs/spotted_lemon.png') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://cdn.socket.io/socket.io-1.0.0.js"></script>
+        <!-- <script src="https://cdn.socket.io/socket.io-1.0.0.js"></script> -->
 
         <script src="https://d3js.org/d3.v4.min.js"></script>
 
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div id="nav-container" class="d-flex justify-content-between">
-            <div class="mx-auto row row-fluid">
+            <div class="mx-auto row row-fluid" id="nav-contents">
                 <div class="p-2"><a href="{{ url_for('player') }}" class="nav-link">Home</a></div>
                 <div class="p-2"><a href="{{ url_for('player_info', card_text='???') }}" class="nav-link">Player Info</a></div>
                 <div class="p-2"><a href="{{ url_for('cards') }}" class="nav-link">Cards</a></div>
@@ -29,6 +29,10 @@
                 <div class="p-2"><a href="{{ url_for('expenses', testing='false', data='none') }}" class="nav-link">Finances</a></div>
                 <div class="p-2"><a href="{{ url_for('stats') }}" class="nav-link">Analysis</a></div>
                 <div class="p-2"><a href="{{ url_for('scoreboard') }}" class="nav-link">Scoreboard</a></div>
+            </div>
+            <div id="money-points">
+                <p class="cur-status"><b>Current $$$:</b> {{ '{:,.0f}'.format(player_info.money) }}</p>
+                <p class="cur-status"><b>Current Points:</b> {{ '{:,.0f}'.format(player_info.points) }}</p>
             </div>
         </div>
         <!--<p id="blah">here</p>
