--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -606,7 +606,7 @@
         {% if ((job_options != None and "Programmer" in job_option_titles) or (job_options == None and category in ["college-grad", "all"])) %}
         <tr>
             <td class="col-picked picked-field">{{ "X" if picked["Programmer"] else "" }}</td>
-            <td class="col-job college-grad">Software Developer</td>
+            <td class="col-job college-grad">Programmer</td>
             <td class="col-salary">
                 <p class="job-details"><b>$100,000</b></p>
                 <p class="job-details small">raise every <span class="raise-time">3</span> years</p>
