--- a/app/templates/player_info.html
+++ b/app/templates/player_info.html
@@ -115,7 +115,7 @@
                 {% if player_info.age < 22 %}
                 <label class="field-label msg"><span class="bold">Parent Aid:</span> <span class="not-bold">${{ "{:,.0f}".format(player_info.parent_help) }}/yr, {{ 22 - player_info.age }} {{ 'yr' if 22 - player_info.age == 1 else 'yrs' }}</span></label>
                 {% else %}
-                <label class="field-label msg"><span class="bold">Retirement:</span> <span class="not-bold">{{ 65 - player_info.age }}  {{ 'yr' if 65 - player_info.age == 1 else 'yrs' }}</span></label>
+                <label class="field-label msg"><span class="bold">Retirement:</span> <span class="not-bold {{ 'retire-alert' if 65 - player_info.age <= 10 else '' }}">{{ 65 - player_info.age }}  {{ 'yr' if 65 - player_info.age == 1 else 'yrs' }}</span></label>
                 {% endif %}
             </td>
             <!-- <td class="field-val"><label class="black-border">{{ player_info.path }}</label></td> -->
