--- a/app/templates/houses.html
+++ b/app/templates/houses.html
@@ -208,7 +208,7 @@
             <td>1,750</td>
             <td>455,000</td>
             <td class="buy-button-cell">
-                <form action="{{ url_for('buy_house', house='Mountain Retreat') }}">
+                <form action="{{ url_for('buy_house', house='Ranch') }}">
                     <button type="submit" id="buy_mountain retreat">BUY</button>
                 </form>
             </td>
@@ -222,7 +222,7 @@
             <td>2,500</td>
             <td>650,000</td>
             <td class="buy-button-cell">
-                <form action="{{ url_for('buy_house', house='Modern Victorian') }}">
+                <form action="{{ url_for('buy_house', house='Snowy Chalet') }}">
                     <button type="submit" id="buy_modern victorian">BUY</button>
                 </form>
             </td>
