--- a/app/templates/player_info.html
+++ b/app/templates/player_info.html
@@ -173,10 +173,10 @@
         <tr>
             <td class="field-name"><label class="field-label brown">College</label></td>
             {% if player_info.path == "college" %}
-                {% if (4 - player_info.num_yrs_college) == 1 %}
-                <td class="field-val"><label class="black-border once">{{ 4 - player_info.num_yrs_college }} yr left</label></td>
+                {% if (5 - player_info.num_yrs_college) == 1 %}
+                <td class="field-val"><label class="black-border once">{{ 5 - player_info.num_yrs_college }} yr left</label></td>
                 {% else %}
-                <td class="field-val"><label class="black-border once">{{ 4 - player_info.num_yrs_college }} yrs left</label></td>
+                <td class="field-val"><label class="black-border once">{{ 5 - player_info.num_yrs_college if (5 - player_info.num_yrs_college) <= 4 else 4 }} yrs left</label></td>
                 {% endif %}
             {% elif player_info.grad_college %}
             <td class="field-val complete"><label class="black-border">Graduated!</label></td>
@@ -185,12 +185,12 @@
             {% endif %}
             <td class="field-name"><label class="field-label brown">Grad 1</label></td>
             {% if player_info.grad_school and not player_info.done_grad_1 %}
-                {% if (1 - player_info.num_yrs_grad_school) == 1 %}
-                <td class="field-val"><label class="black-border once">{{ 1 - player_info.num_yrs_grad_school }} yr left</label></td>
-                {% elif (1 - player_info.num_yrs_grad_school) < 0 %}
+                {% if (2 - player_info.num_yrs_grad_school) == 1 %}
+                <td class="field-val"><label class="black-border once">{{ 2 - player_info.num_yrs_grad_school }} yr left</label></td>
+                {% elif (2 - player_info.num_yrs_grad_school) < 0 %}
                 <td class="field-val"><label class="black-border once">N/A</label></td>
                 {% else %}
-                <td class="field-val"><label class="black-border once">{{ 1 - player_info.num_yrs_grad_school }} yrs left</label></td>
+                <td class="field-val"><label class="black-border once">{{ 2 - player_info.num_yrs_grad_school }} yrs left</label></td>
                 {% endif %}
             {% elif player_info.done_grad_1 %}
             <td class="field-val complete"><label class="black-border">Graduated!</label></td>
@@ -199,12 +199,12 @@
             {% endif %}
             <td class="field-name"><label class="field-label brown">Grad 2</label></td>
             {% if player_info.grad_school and not player_info.done_grad_2 %}
-                {% if (2 - player_info.num_yrs_grad_school) == 1 %}
-                <td class="field-val"><label class="black-border once">{{ 2 - player_info.num_yrs_grad_school }} yr left</label></td>
-                {% elif (2 - player_info.num_yrs_grad_school) < 0 %}
+                {% if (3 - player_info.num_yrs_grad_school) == 1 %}
+                <td class="field-val"><label class="black-border once">{{ 3 - player_info.num_yrs_grad_school }} yr left</label></td>
+                {% elif (3 - player_info.num_yrs_grad_school) < 0 %}
                 <td class="field-val"><label class="black-border once">N/A</label></td>
                 {% else %}
-                <td class="field-val"><label class="black-border once">{{ 2 - player_info.num_yrs_grad_school }} yrs left</label></td>
+                <td class="field-val"><label class="black-border once">{{ 3 - player_info.num_yrs_grad_school }} yrs left</label></td>
                 {% endif %}
             {% elif player_info.done_grad_2 %}
             <td class="field-val complete"><label class="black-border">Graduated!</label></td>
@@ -213,12 +213,12 @@
             {% endif %}
             <td class="field-name"><label class="field-label brown">Grad 6</label></td>
             {% if player_info.grad_school and not player_info.done_grad_6 %}
-                {% if (6 - player_info.num_yrs_grad_school) == 1 %}
-                <td class="field-val"><label class="black-border once">{{ 6 - player_info.num_yrs_grad_school }} yr left</label></td>
-                {% elif (3 - player_info.num_yrs_grad_school) < 0 %}
+                {% if (7 - player_info.num_yrs_grad_school) == 1 %}
+                <td class="field-val"><label class="black-border once">{{ 7 - player_info.num_yrs_grad_school }} yr left</label></td>
+                {% elif (7 - player_info.num_yrs_grad_school) < 0 %}
                 <td class="field-val"><label class="black-border once">N/A</label></td>
                 {% else %}
-                <td class="field-val"><label class="black-border once">{{ 6 - player_info.num_yrs_grad_school }} yrs left</label></td>
+                <td class="field-val"><label class="black-border once">{{ 7 - player_info.num_yrs_grad_school }} yrs left</label></td>
                 {% endif %}
             {% elif player_info.done_grad_6 %}
             <td class="field-val complete"><label class="black-border">Graduated!</label></td>
@@ -267,7 +267,7 @@
     <!-- <script src="./static/js/timeline.js"></script> -->
     <script>
         // window.onbeforeunload = function(e) {
-        //     note1 = JSON.stringify(document.getElementById('notepad1').value);
+        //     note1 = document.getElementById('notepad1').value.replace(/\n/g, '<br/>');
         //     note2 = document.getElementById('notepad2').value;
         //     note3 = document.getElementById('notepad3').value;
         //     note4 = document.getElementById('notepad4').value;
@@ -331,9 +331,15 @@
         done_action = "{{ player_info.done_action }}";
         end_of_year = "{{ player_info.end_of_year }}";
         ready_to_start = "{{ game.ready_to_start }}";
-        if(picked_card.toLowerCase() == "true") {
+        all_paid = "{{ all_paid }}".toLowerCase() == "true" ? true : false;
+        mil_to_college = "{{ player_info.mil_to_college }}".toLowerCase() == "true" ? true : false;
+        mil_start_college = parseInt("{{ player_info.mil_start_college }}");
+        if((picked_card.toLowerCase() == "true")) {
             document.getElementById('pick-card-button').disabled = true;
-            document.getElementById('do-action-button').disabled = false;
+            if((mil_to_college && mil_start_college == 0))
+                document.getElementById('do-action-button').disabled = true;
+            else
+                document.getElementById('do-action-button').disabled = false;
 
             disable_no_action = "{{ player_info.disable_no_action }}".toLowerCase() == "true" ? true : false;
             if(disable_no_action) 
@@ -341,12 +347,12 @@
             else
                 document.getElementById('no-action-button').disabled = false;
         }
-        else if((ready_to_start.toLowerCase() == "false")) {    // game not started yet
+        else if((ready_to_start.toLowerCase() == "false") || (!all_paid)) {    // game not started yet
             document.getElementById('pick-card-button').disabled = true;
             document.getElementById('do-action-button').disabled = true;
             document.getElementById('no-action-button').disabled = true;
         }
-        else {  // have not yet picked card
+        else if(all_paid) {  // have not yet picked card
             document.getElementById('pick-card-button').disabled = false;
             document.getElementById('do-action-button').disabled = true;
             document.getElementById('no-action-button').disabled = true;
