--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -46,33 +46,23 @@
             </td>
             <td class="col-attrs">
                 <ul>
-                    <li>join at beginning of game</li>
-                    <li>must remain in military for at least 4 years</li>
-                    <li class="once">salary doubles every 4 years up to 5 raises</li>
-                    <li>if lose job, demoted; if at min salary and lose job again, kicked out of military and must pick regular job</li>
-                    <li>once reach 4 years, options:
-                        <ul>
-                            <li>go to college:
-                                <ul>
-                                    <li>25% off tuition for 4 years (still eligible for scholarships)</li>
-                                    <li>eligible for benefits for # yrs served (excluding 4 yrs of college)</li>
-                                    <li>must buy vehicle upon enrollment if you don't have one</li>
-                                    <li>must buy house upon enrollment if you don't have one</li>
-                                </ul>
-                            </li>
-                            <li>stay in military:
-                                <ul>
-                                    <li>lifetime benefits</li>
-                                    <li>no need to buy house/car until married</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>benefits:
+                    <li>can only join at beginning of game</li>
+                    <li>lifetime benefits:
                         <ul>
                             <li>free health insurance</li>
                             <li>2 people free for local travel</li>
                             <li>50% off yearly entertainment expenses</li>
+                        </ul>
+                    </li>
+                    <li>no need to buy house/car until married</li>
+                    <li class="once">salary doubles every 4 years up to 5 raises</li>
+                    <li>if lose job, demoted; if at min salary and lose job again, kicked out of military and must pick regular job</li>
+                    <li>after 4 years of service, can go to college:
+                        <ul>
+                            <li>25% off tuition for 4 years</li>
+                            <li>only get benefits for # yrs served (excluding college/grad school)</li>
+                            <li>must buy vehicle upon enrollment if you don't have one</li>
+                            <li>must buy house upon enrollment if you don't have one</li>
                         </ul>
                     </li>
                 </ul>
@@ -172,6 +162,7 @@
                             <li>roll odd: salary - $15,000</li>
                         </ul>
                     </li>
+                    <li>not eligible for promotions</li>
                 </ul>
             </td>
         </tr>
@@ -495,6 +486,8 @@
             <td class="col-attrs">
                 <ul>
                     <li>if player depressed, collect $1000 per year until cured</li>
+                    <li>if player has mental illness, collect $5000</li>
+                    <li>if player has family issues, collect $5000</li>
                 </ul>
             </td>
         </tr>
