--- a/app/templates/expenses.html
+++ b/app/templates/expenses.html
@@ -77,12 +77,12 @@
                     <label for="test-married"><b>Married?</b></label><br>
 
                     <p><b>Have child:</b></p>
+                    <input type="radio" name="test-kids" value="test-kids-none" checked>
+                    <label for="test-kids-none">0</label><br>
                     <input type="radio" name="test-kids" value="test-single-child">
                     <label for="test-single-child" class="left-radio">1</label>
                     <input type="radio" name="test-kids" value="test-twins">
                     <label for="test-twins" class="left-radio">2</label>
-                    <input type="radio" name="test-kids" value="test-kids-none" checked>
-                    <label for="test-kids-none">0</label><br>
 
                     <label for="test-loan"><b>Loan:</b></label><br>
                     <b id="dollar-sign">$</b> <input type="text" class="textbox" name="test-loans-amount"><br>
@@ -452,10 +452,13 @@
                 {% elif (player_info.yrs_til_change_car != 3) and (player_info.have_auto_ins) %}
                     <input type="checkbox" name="auto-ins" class="ins-checkbox in-line" value="auto-ins" id="new-auto-ins" checked>
                     <label for="auto-ins" class="in-line checkbox-label">${{ '{:,.0f}'.format(car.insurance) }}</label>
-                {% else %}
+                {% elif player_info.yrs_til_change_car == 3 %}
                     <input type="checkbox" name="auto-ins" class="ins-checkbox in-line" value="auto-ins" id="new-auto-ins">
                     <label for="auto-ins" class="in-line checkbox-label short-margin">${{ '{:,.0f}'.format(new_auto_ins) }}</label>    
                     <label class="in-line once" class="ins-notice">New car: get insurance if desired</label>
+                {% else %}
+                    <input type="checkbox" name="auto-ins" class="ins-checkbox in-line" value="auto-ins" id="new-auto-ins">
+                    <label for="auto-ins" class="in-line checkbox-label">${{ '{:,.0f}'.format(car.insurance) }}</label>
                 {% endif %}
             
                 <p class="health-ins-bg input-label pad-bottom"><b>Health Insurance </b></p>
@@ -480,10 +483,13 @@
                 {% elif (player_info.yrs_til_change_house != 3) and (player_info.have_home_ins) %}
                     <input type="checkbox" name="home-ins" class="ins-checkbox in-line" value="home-ins" id="new-home-ins" checked>
                     <label for="home-ins" class="in-line checkbox-label">${{ '{:,.0f}'.format(house.insurance) }}</label>
-                {% else %}
+                {% elif player_info.yrs_til_change_house == 3 %}
                     <input type="checkbox" name="home-ins" class="ins-checkbox in-line" value="home-ins" id="new-home-ins">
                     <label for="home-ins" class="in-line checkbox-label short-margin">${{ '{:,.0f}'.format(new_home_ins) }}</label>
                     <label class="in-line once" class="ins-notice">New house: get insurance if desired</label>
+                {% else %}
+                    <input type="checkbox" name="home-ins" class="ins-checkbox in-line" value="home-ins" id="new-home-ins">
+                    <label for="home-ins" class="in-line checkbox-label">${{ '{:,.0f}'.format(house.insurance) }}</label>
                 {% endif %}
                 <!-- <label for="home-ins" class="in-line checkbox-label">${{ '{:,.0f}'.format(new_home_ins) }}</label> -->
                 
