--- a/app/templates/houses.html
+++ b/app/templates/houses.html
@@ -293,7 +293,7 @@
             document.getElementById('buy_igloo').disabled = true
             document.getElementById('buy_hut').disabled = true
             document.getElementById('buy_tree house').disabled = true
-            document.getElementById('buy_rented room').disabled = true
+            document.getElementById('buy_studio').disabled = true
         }
         if(num_people > 4) {
             document.getElementById('buy_mobile home').disabled = true
