--- a/app/templates/player_account.html
+++ b/app/templates/player_account.html
@@ -61,6 +61,9 @@
                     <h4 class="game-id-field">Game ID: {{ game.id }}</h4>
                     <h4 class="date-field">Finished: {{ moment(game.date_finished).format('MM/DD/YY') }}</h4>
                 </div>
+                <a href="{{ url_for('delete_game', game_id=game.id) }}">
+                    <p class="remove-game delete-game">Delete</p>
+                </a>
             </div>
         </a>
         {% endif %}
