upgrade grad years

--- a/app/static/css/expenses.css
+++ b/app/static/css/expenses.css
@@ -416,6 +416,10 @@ option {
     margin-right: 0;
 }
 
+#can-afford {
+    margin-left: 10px;
+}
+
 /* .cur-status {
     font-size: 25px;
     color: green
