--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -329,6 +329,7 @@
             <td class="col-attrs">
                 <ul>
                     <li>25% off house cost </li>
+                    <li>don't pay for earthquake damage</li>
                     <li>collect $5000 for other players' earthquake damage</li>
                 </ul>
             </td>
